--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   lottie: ^1.4.3
+  google_fonts: ^3.0.1
+  provider: ^6.0.3
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
