--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  mockito: ^5.3.1
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.1
 
 flutter:
   uses-material-design: true
